--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description"content="Market Place"/>
+    <meta name="keywords" content="productos en línea , comprar en línea , tienda en línea , mercado digital"/>
+    <meta name="author"content="Hacunde-Bunkua"/>
+    
+    <link rel="icon" type="image/svg+xml" href="/IconoPestaña.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Market Place</title>
   </head>
